# llm-council

./: .coverage  .coveragerc  .gitignore  AGENTS.md  CHECKLIST.md  GUI_REVIEW.md  README.md  conftest.py  pyproject.toml  todo.md
backend/: council.py  main.py  openrouter.py  settings.py  storage.py
backend/tests/: test_council.py  test_main.py  test_openrouter.py  test_settings.py  test_storage.py
docs/: ARCHITECTURE.md  GUI.md  PLAN.md  TESTING.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/coverage/: lcov.info
frontend/coverage/lcov-report/: ChatInterface.jsx.html  Settings.jsx.html  Sidebar.jsx.html  Stage1.jsx.html  Stage2.jsx.html  Stage3.jsx.html  index.html
frontend/coverage/lcov-report/src/: App.jsx.html  index.html
frontend/coverage/lcov-report/src/components/: ChatInterface.jsx.html  Settings.jsx.html  Sidebar.jsx.html  Stage1.jsx.html  Stage2.jsx.html  Stage3.jsx.html  index.html
frontend/src/: App.css  App.jsx  App.test.jsx  api.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  ChatInterface.test.jsx  Settings.css  Settings.jsx  Settings.test.jsx  Sidebar.css  Sidebar.jsx  Sidebar.test.jsx  Stage1.css  Stage1.jsx  Stage1.test.jsx  Stage2.css  Stage2.jsx  Stage2.test.jsx  Stage3.css  Stage3.test.jsx
gui/: __init__.py  api.py  app.py  bridge.py  config.py  controller.py  models.py  persistence.py  state.py  stream.py
gui/tests/: __init__.py  test_api.py  test_bridge.py  test_controller.py  test_models.py  test_persistence.py  test_state.py  test_stream.py
gui/ui/: Main.qml
